<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/key_game_mode"
        android:title="@string/pref_title_game_mode"
        android:summary="@string/pref_description_game_mode"
        android:defaultValue="0"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <Preference
        android:key="@string/key_game_mode_summary" >
    </Preference>

    <ListPreference
        android:key="@string/key_algorithm"
        android:title="@string/pref_title_algorithm"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <EditTextPreference
        android:key="@string/key_use_code"
        android:title="@string/pref_title_use_code"
        android:summary="@string/pref_description_use_code"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/key_custom_maze_width"
        android:title="@string/pref_title_custom_maze_width"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="@string/key_custom_maze_height"
        android:title="@string/pref_title_custom_maze_height"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLines="1" />

    <Preference
        android:key="@string/key_custom_maze_create"
        android:title="@string/pref_title_custom_maze_create" >
    </Preference>

    <Preference
        android:key="@string/key_custom_maze_solve"
        android:title="@string/pref_title_custom_maze_solve" >
    </Preference>

    <Preference
        android:key="@string/key_maze_create"
        android:title="@string/pref_title_maze_create" >
    </Preference>

</PreferenceScreen>
