<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/key_show_tracer"
        android:title="@string/pref_title_show_tracer"
        android:summary="@string/pref_description_show_tracer"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="@string/key_square_cells"
        android:title="@string/pref_title_square_cells"
        android:defaultValue="true" >
    </SwitchPreference>

    <Preference
        android:key="@string/key_recalibrate"
        android:title="@string/pref_title_recalibrate" >
    </Preference>

    <Preference
        android:key="@string/key_default_tilt"
        android:title="@string/pref_title_default_tilt" >
    </Preference>

</PreferenceScreen>